[build-system]
requires = [
  "setuptools>=68.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "matrixcbot"
version = "0.1.0"
description = "Algorithmic forex trading bot with advanced filtering and AI integration"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
keywords = ["forex", "trading", "bot", "algorithmic", "ai"]

dependencies = [
  "requests>=2.28.0",
  "python-dotenv>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "flake8>=6.0",
  "mypy>=1.0",
]

[tool.setuptools]
packages = ["matrixcbot"]
